--- a/ex04/Makefile
+++ b/ex04/Makefile
@@ -1,6 +1,6 @@
 NAME = SedIsForLosers
-CXX = c++
-CXXFLAGS = -Wall -Wextra -Werror -std=c++98
+CC = c++
+FLAGS = -Wall -Wextra -Werror -std=c++98 -pedantic-errors
 
 SRCS = main.cpp SedIsForLosers.cpp
 OBJS = $(SRCS:.cpp=.o)
@@ -8,7 +8,7 @@ OBJS = $(SRCS:.cpp=.o)
 all: $(NAME)
 
 $(NAME): $(OBJS)
-	$(CXX) $(CXXFLAGS) -o $(NAME) $(OBJS)
+	$(CC) $(CXXFLAGS) -o $(NAME) $(OBJS)
 
 clean:
 	rm -f $(OBJS)
