--- a/ex01/Makefile
+++ b/ex01/Makefile
@@ -1,4 +1,4 @@
-NAME = zombieHorde
+NAME = a.out
 FLAGS = -Wall -Wextra -Werror -std=c++98 -pedantic-errors
 SRCS = main.cpp Zombie.cpp zombieHorde.cpp
 OBJS = $(SRCS:.cpp=.o)
@@ -17,8 +17,8 @@ fclean: clean
 re: fclean all
 
 format:
-    $(if $(SRCS), clang-format --style=Google -i $(SRCS))
-    $(if $(HEADERS), clang-format --style=Google -i $(HEADERS))
-    $(if $(SHS), shfmt -w $(SHS))
+	$(if $(SRCS), clang-format --style=Google -i $(SRCS))
+	$(if $(HEADERS), clang-format --style=Google -i $(HEADERS))
+	$(if $(SHS), shfmt -w $(SHS))
 
 .PHONY: all clean fclean re
