--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -5,4 +5,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
      - run: echo "Hello, World!"
-     - user: ${{ secrets.USER }}
+     - uses: actions/checkout@v4
